--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "del": "^6.0.0",
     "gulp": "^5.0.0",
     "gulp-csso": "^4.0.1",
+    "gulp-debug": "^5.0.1",
     "gulp-file-include": "^2.3.0",
     "gulp-format-html": "^1.2.5",
     "gulp-imagemin": "^8.0.0",
     "gulp-less": "^5.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
